<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BusinessCare</string>
    <string name="copyright_text">© 2025 BusinessCare. Tous droits réservés.</string>
    <string name="app_logo_description">Logo de l\'application</string>
    <string name="not_available_short">N/A</string>
    <string name="not_specified">Non spécifié</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
 <string name="save">Sauvegarder</string>
 <string name="login_screen_title">Connexion Business Care</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Mot de passe</string>
    <string name="login_checkbox_remember_me">Se souvenir de moi</string>
    <string name="login_button_text">Connexion</string>
    <string name="login_success_message">Connexion réussie !</string>
    <string name="login_error_email_password_required">Email et mot de passe requis.</string>
    <string name="login_logo_content_description">Logo Business Care</string>
    <string name="login_footer_copyright">© 2025 BusinessCare. Tous droits réservés.</string>
    <string name="error_user_id_not_found">ID utilisateur non trouvé. Veuillez vous reconnecter.</string>
    <string name="error_provider_id_missing_for_service">ID du prestataire manquant pour le service : %s</string>
    <string name="error_cannot_book_item_not_service">Cet article ne peut pas être réservé comme un service.</string>
    <string name="nfc_toolbar_title">Gestionnaire NFC</string>
    <string name="nfc_page_header">Business Care NFC</string>
    <string name="nfc_icon_content_description">Icône NFC</string>
    <string name="nfc_not_supported">NFC non supporté sur cet appareil.</string>
    <string name="nfc_disabled">NFC désactivé. Veuillez l\'activer.</string>
    <string name="nfc_ready">Prêt à scanner/écrire un tag NFC.</string>
    <string name="nfc_status_ready_to_scan">Prêt à scanner un tag NFC...</string>
    <string name="nfc_approach_tag">Approchez un tag NFC…</string>
    <string name="nfc_tag_detected_foreground">Tag NFC détecté (Premier plan) !</string>
    <string name="nfc_tag_detected_default">Tag NFC détecté</string>
    <string name="nfc_empty_tag_content">Tag NFC vide</string>
    <string name="edittext_hint_write_nfc">Entrez le texte à écrire ici</string>
    <string name="button_read_mode">Mode Lecture</string>
    <string name="button_write_mode">Mode Écriture</string>
    <string name="nfc_status_read_mode">Mode Lecture activé. Approchez un tag.</string>
    <string name="nfc_status_write_mode">Mode Écriture activé. Entrez du texte et approchez un tag.</string>
    <string name="nfc_write_empty_warning">Veuillez entrer du texte à écrire.</string>
    <string name="nfc_write_success">Message écrit avec succès!</string>
    <string name="nfc_write_format_success">Tag formaté et message écrit!</string>
    <string name="nfc_language_code_for_ndef_text">fr</string>
    <string name="nfc_text_parsed_display">Contenu Lu (%1$d):\n%2$s</string>
    <string name="nfc_written_content_display_success">%1$s\nContenu: %2$s</string>
    <string name="nfc_channel_name">Notifications NFC</string>
    <string name="nfc_channel_description">Notifications pour les tags NFC scannés</string>
    <string name="nfc_notification_title">Tag NFC Scanné</string>
    <string name="nfc_notification_permission_missing">Permission d\'afficher les notifications requise.</string>
    <string name="nfc_error_tag_not_found">Erreur: Tag non trouvé dans l\'intent.</string>
    <string name="nfc_error_not_ndef">Le tag n\'est pas au format NDEF.</string>
    <string name="nfc_error_empty_tag">Le tag est vide ou illisible (NDEF).</string>
    <string name="nfc_error_io">Erreur de lecture/écriture (IO): %1$s</string>
    <string name="nfc_error_format">Erreur de Format: %1$s</string>
    <string name="nfc_error_generic">Erreur inconnue: %1$s</string>
    <string name="nfc_error_not_ndef_or_formattable">Tag non compatible NDEF (ni formatable).</string>
    <string name="nfc_error_read_generic">Erreur lecture tag: %1$s</string>
    <string name="nfc_error_payload_parse">Erreur décodage Payload: %1$s</string>
    <string name="nfc_write_error_tag_lost">Tag perdu. Réessayez.</string>
    <string name="nfc_write_error_read_only">Tag non modifiable.</string>
    <string name="nfc_write_error_no_space">Espace insuffisant (%1$d > %2$d).</string>
    <string name="nfc_write_error_io">Erreur écriture (IO): %1$s</string>
    <string name="nfc_write_error_format">Erreur écriture (Format): %1$s</string>
    <string name="nfc_write_error_unknown">Erreur inconnue écriture: %1$s</string>
    <string name="nfc_format_error_io">Erreur formatage (IO): %1$s</string>
    <string name="nfc_format_error_format">Erreur formatage (Format): %1$s</string>
    <string name="nfc_format_error_unknown">Erreur inconnue formatage: %1$s</string>
    <string name="nfc_error_creating_message">Erreur lors de la création du message NFC.</string>
    <string name="nfc_text_payload_error">Erreur texte: %s</string>
    <string name="nfc_uri_payload_error">Erreur URI: %s</string>
    <string name="nfc_unknown_payload_type">Type Inconnu: %s</string>
    <string name="nfc_read_error_io_default">Erreur IO</string>
    <string name="nfc_read_error_format_default">Format invalide</string>
    <string name="nfc_read_error_unknown_default">Erreur inconnue</string>
    <string name="nfc_log_nfc_dev_new_intent">onNewIntent appelé. Mode: %1$s, Action = %2$s</string>
    <string name="nfc_log_nfc_dev_handling_intent">Gestion de l\'intent. Action: %1$s, Mode: %2$s</string>
    <string name="nfc_log_nfc_dev_tag_detected">Tag détecté: ID = %s</string>
    <string name="nfc_log_nfc_dev_mode_read">Mode LECTURE: Analyse du contenu du tag.</string>
    <string name="nfc_log_nfc_dev_mode_write">Mode ÉCRITURE: Tentative d\'écriture.</string>
    <string name="nfc_log_nfc_write_error_creating_ndef_message">Erreur lors de la création du NdefMessage.</string>
    <string name="nfc_log_nfc_write_empty_field">Champ de texte vide. Ecriture annulée.</string>
    <string name="nfc_log_nfc_dev_tag_object_null">Objet Tag est null dans l\'intent</string>
    <string name="nfc_log_nfc_dev_intent_not_nfc">Intent non lié à la découverte NFC: %s</string>
    <string name="nfc_log_nfc_dev_setup_fg_dispatch">Configuration du foreground dispatch pour Lecture/Écriture.</string>
    <string name="nfc_log_nfc_dev_error_mime_ndef">Erreur type MIME NDEF</string>
    <string name="nfc_log_nfc_dev_fg_dispatch_enabled">Foreground dispatch activé pour NDEF, TECH, TAG.</string>
    <string name="nfc_log_nfc_dev_fg_dispatch_disabled">Foreground dispatch désactivé</string>
    <string name="nfc_log_nfc_write_lang_code_too_long">Code langue trop long: %s</string>
    <string name="nfc_log_nfc_write_error_creating_text_record">Erreur création NdefRecord texte</string>
    <string name="nfc_log_nfc_write_tag_not_supported">Tag non supporté (ni NDEF ni NdefFormatable).</string>
    <string name="nfc_log_nfc_write_tag_not_writable">Tag NDEF non modifiable.</string>
    <string name="nfc_log_nfc_write_insufficient_space">Espace insuffisant NDEF (%1$d > %2$d).</string>
    <string name="nfc_log_nfc_write_message_written">Message NDEF écrit.</string>
    <string name="nfc_log_nfc_write_tag_lost_ndef">Tag NDEF perdu.</string>
    <string name="nfc_log_nfc_write_io_error_ndef">Erreur I/O NDEF.</string>
    <string name="nfc_log_nfc_write_format_error_ndef">Erreur Format NDEF.</string>
    <string name="nfc_log_nfc_write_unknown_error_ndef">Erreur inconnue NDEF.</string>
    <string name="nfc_log_nfc_write_error_closing_ndef">Erreur fermeture NDEF.</string>
    <string name="nfc_log_nfc_write_tag_formatted">Tag formaté et message écrit.</string>
    <string name="nfc_log_nfc_write_tag_lost_formatable">Tag NdefFormatable perdu.</string>
    <string name="nfc_log_nfc_write_io_error_formatable">Erreur I/O NdefFormatable.</string>
    <string name="nfc_log_nfc_write_format_error_formatable">Erreur Format NdefFormatable.</string>
    <string name="nfc_log_nfc_write_unknown_error_formatable">Erreur inconnue NdefFormatable.</string>
    <string name="nfc_log_nfc_write_error_closing_formatable">Erreur fermeture NdefFormatable.</string>
    <string name="nfc_broadcast_log_received">Broadcast reçu: %s</string>
    <string name="nfc_broadcast_log_invalid_intent">Contexte ou action d\'intent invalide.</string>
    <string name="nfc_broadcast_log_extras_start">--- Extras de l\'Intent START ---</string>
    <string name="nfc_broadcast_log_extra_details">Extra: Clé=%1$s, Valeur=%2$s, Type=%3$s</string>
    <string name="nfc_broadcast_log_no_extras">Aucun extra trouvé dans l\'intent.</string>
    <string name="nfc_broadcast_log_extras_end">--- Extras de l\'Intent END ---</string>
    <string name="nfc_broadcast_log_tag_null">Tag est null en utilisant la clé NfcAdapter.EXTRA_TAG.</string>
    <string name="nfc_broadcast_log_tag_found">Tag TROUVÉ en utilisant la clé NfcAdapter.EXTRA_TAG: ID = %s</string>
    <string name="nfc_broadcast_log_parsed_content">Contenu analysé (peut être une erreur si le tag était null): %s</string>
    <string name="nfc_parse_log_tag_null_in_parseNdef">Objet Tag fourni à parseNdefTagToString était null.</string>
    <string name="nfc_parse_log_ndef_message_null">Message NDEF est null après connexion.</string>
    <string name="nfc_parse_log_ndef_records_found">Trouvé %d enregistrements NDEF.</string>
    <string name="nfc_parse_log_error_reading_ndef">Erreur lecture tag NDEF: %s</string>
    <string name="nfc_parse_log_error_parsing_payload">Erreur analyse payload enregistrement</string>
    <string name="nfc_broadcast_log_notification_shown">Notification affichée.</string>
    <string name="nfc_broadcast_log_security_exception_notification">SecurityException lors de l\'affichage de la notification malgré la vérification de permission.</string>
    <string name="nfc_broadcast_log_permission_not_granted">Permission POST_NOTIFICATIONS non accordée.</string>
    <string name="nfc_broadcast_log_notification_shown_pre_tiramisu">Notification affichée (pré-Tiramisu).</string>
    <string name="nfc_broadcast_log_exception_pre_tiramisu">Exception lors de l\'affichage de la notification (pré-Tiramisu).</string>
    <string name="settings_title">Paramètres</string>
    <string name="settings_appearance">Apparence</string>
    <string name="settings_theme">Mode sombre</string>
    <string name="settings_language">Langue</string>
    <string name="settings_info">Informations</string>
    <string name="settings_about">À propos</string>
    <string name="settings_account">Compte</string>
    <string name="settings_logout">Déconnexion</string>
    <string name="app_version_format">Version %s</string>
 <string name="select_language">Sélectionner une langue</string>
    <string name="language_french">Français</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Español</string>
    <string name="language_german">Deutsch</string>
    <string name="theme_icon_description">Icône de thème</string>
    <string name="language_icon_description">Icône de langue</string>
    <string name="about_icon_description">Icône d\'information</string>
    <string name="logout_icon_description">Icône de déconnexion</string>
    <string name="arrow_icon_description">Icône de flèche</string>
    <string name="about_title">À propos</string>
    <string name="about_description">Business Care est une application conçue pour vous aider à gérer vos activités professionnelles efficacement. Planifiez vos rendez-vous, organisez vos services et bien plus encore.</string>
    <string name="schedule_title_toolbar">Mon Planning</string>
    <string name="fab_add_booking_content_description">Ajouter une réservation</string>
    <string name="app_version">Version %s</string>
</resources>